# Mail-Reader

mailreader/: .gitignore  README.md  pyproject.toml  report.md
mailreader/src/mailreader/: crew.py  main.py
mailreader/src/mailreader/config/: agents.yaml  tasks.yaml
mailreader/src/mailreader/tools/: addTask.py  bodyReaderTool.py  mail_tools.py  pushNoti.py  reminderTool.py  subjectReaderTool.py
